# Modularis_Core

./: .gitignore  CMakeLists.txt  README (English).md  README en_US.md  README.md  configuration.cmake  configuration.py  make.py  makepy.py
FreeVox editor/: README (English).md  README en_US.md  README.md
FreeVox player/: README (English).md  README en_US.md  README.md
FreeVox player/include/: FreeVox.h
FreeVox player/include/modules/: Generator.h  Sampler.h
FreeVox player/include/modules/system/: Controller.h  Controller_proto.h  Module.h
FreeVox player/include/modules/system/render/: Modules_stages.h  Stage.h
FreeVox player/include/patterns/: Pattern.h
FreeVox player/include/patterns/keys/: Automation.h  Empty_key.h  Key.h  Note.h
FreeVox player/include/patterns/render/: Key_pointer.h  Keys_chains.h
FreeVox player/include/system/curves/: Bezier.h  Curve.h  Flat.h  Linear.h
FreeVox player/include/system/structures/: Color.h
FreeVox player/include/system/structures/linked list/: Linked_list.h  List_node.h
FreeVox player/include/system/structures/vectors/: Vector2.h
FreeVox player/include/typedefs/modules/: Generator.h  Sampler.h
FreeVox player/include/typedefs/modules/system/: Controller.h  Module.h
FreeVox player/include/typedefs/patterns/: Pattern.h
FreeVox player/include/typedefs/patterns/keys/: Automation.h  Empty_key.h  Key.h  Note.h
FreeVox player/include/typedefs/patterns/render/: Key_pointer.h  Keys_chains.h
FreeVox player/include/typedefs/system/curves/: Bezier.h  Curve.h  Flat.h  Linear.h
FreeVox player/include/typedefs/system/structures/: Color.h
FreeVox player/src/: FreeVox.c  FreeVox.cpp  player.c
FreeVox player/src/modules/: Module.cpp  Output.cpp
FreeVox player/src/modules/ports/inputs/: Sounds_input.cpp
FreeVox player/src/modules/ports/outputs/: Sound_output.cpp
FreeVox renderer/: README (English).md  README.md
debian/: control  copyright  libmodularis-cpp-dev.install  libmodularis-dev.install  libmodularis0.install  rules
include/Modularis_Core/: Modularis.h  Modularis.hpp
include/Modularis_Core/core/types/: Sound_value.hpp
include/Modularis_Core/modules/effects/note/: Note_chorus.h  Transpose.h
include/Modularis_Core/modules/effects/sound/: Amplifier.h  Delay.h  Modulator.h
include/Modularis_Core/modules/players/: Sequencer.h  Sequencer.hpp
include/Modularis_Core/modules/synthesizers/: Oscillator.h  Oscillator.hpp  Sampler.h
include/Modularis_Core/modules/system/: Module.h  Module.hpp  Oscillation.h  Oscillation.hpp  Output.h  Output.hpp  Sequence.h  Sequence.hpp  Sequence_note.h  Sequence_note.hpp
include/Modularis_Core/ports/: Note.h  Note.hpp  Ports_folder.h  Sound.h  Sound.hpp
include/Modularis_Core/ports/controllers/: ADSR.h  ADSR.hpp  Integer_controller.h  Integer_controller.hpp  Real_controller.h  Real_controller.hpp
include/Modularis_Core/ports/system/: Connection.h  Note_event.h  Note_event.hpp  Port.h  Port.hpp  Port_base.h  Port_base.hpp  Ports_folder.h  Ports_folder.hpp
include/Modularis_Core/system/modules/: Module.h  Output.h
include/Modularis_Core/system/ports/: Any_port.h  Connection.h  Port.h
include/Modularis_Core/system/ports/Note/: Note_event.h  Note_events.h  Note_type.h
include/Modularis_Core/system/types/: Sound_value.h
include/Modularis_Core/typedefs/: Modularis.h
include/Modularis_Core/typedefs/modules/players/: Sequencer.h
include/Modularis_Core/typedefs/modules/synthesizers/: Oscillator.h  Sampler.h
include/Modularis_Core/typedefs/modules/system/: Output.h  Sequence.h  Sequence_note.h
include/Modularis_Core/typedefs/ports/: Note.h  Sound.h
include/Modularis_Core/typedefs/ports/controllers/: ADSR.h  Integer_controller.h  Real_controller.h
include/Modularis_Core/typedefs/ports/system/: Connection.h  Port_base.h  Ports_folder.h
include/Modularis_Core/typedefs/system/modules/: Module.h
include/Modularis_Core/typedefs/system/ports/: Any_port.h  Port.h
include/Modularis_Core_C/: Modularis.h
include/Modularis_Core_C++/: Modularis.hpp
include/Modularis_Core_C++/modules/effects/note/: Note_chorus.hpp  Transpose.hpp
include/Modularis_Core_C++/modules/players/: Sequencer.hpp
include/Modularis_Core_C++/modules/synthesizers/: Oscillator.hpp  Sampler.hpp
include/Modularis_Core_C++/modules/system/: Module.hpp  Oscillation.hpp  Output.hpp  Sequence.hpp  Sequence_note.hpp
include/Modularis_Core_C++/ports/: Note.hpp  Ports_folder.hpp  Sound.hpp
include/Modularis_Core_C++/ports/controllers/: ADSR.hpp  Integer_controller.hpp  Real_controller.hpp
include/Modularis_Core_C++/ports/system/: Connection.hpp  Note_event.hpp  Note_type.hpp  Port.hpp  Port_base.hpp  Ports_folder.hpp
include/Modularis_Core_C++/system/modules/: Module.hpp  Output.hpp
include/Modularis_Core_C++/system/ports/: Any_port.hpp  Port.hpp
src/framework/libmodularis-cpp-dev/: Modularis.cpp
src/framework/libmodularis-cpp-dev/ports/: Note.cpp  Ports_folder.cpp  Sound.cpp
src/framework/libmodularis-cpp-dev/ports/system/: Port.cpp  (+1 more)
src/framework/libmodularis0/: Modularis.c
src/framework/libmodularis0/ports/: Note.c  Sound.c
src/libmodularis-cpp-dev/ports/: Note.cpp
src/libmodularis-cpp-dev/ports/controllers/: ADSR.cpp  Real_controller.cpp
src/libmodularis0/: Modularis.c
src/libmodularis0/modules/synthesizers/: Sampler.c
src/libmodularis0/ports/: Ports_folder.c
src/libmodularis0/ports/controllers/: Integer_controller.c  Real_controller.c
src/libmodularis0/system/modules/: Module.c  Output.c
src/libmodularis0/system/ports/: Port.c
src/modules/players/: Sequencer.cpp
src/modules/synthesizers/: Oscillator.cpp
src/modules/system/: Module.cpp  Output.cpp
src/packaging/deb/: changelog  control  copyright  shlibs
src/ports/: Note.cpp  Sound.cpp
src/ports/controllers/: Integer_controller.cpp  Real_controller.cpp
src/ports/system/: Port.cpp  Ports_folder.cpp
test/: README.md  main.c  main.cpp  test  test-c  test-c.cmd  test-cpp  test-cpp.cmd  test-nogui  test-nogui.cmd  test.cmd
test/include/: text GNU.h  text GNU.hpp  text Windows.h  text Windows.hpp
(+108 files in other folders)
